--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@angular/platform-browser-dynamic": "~8.2.14",
     "@angular/router": "~8.2.14",
     "angular-calendar": "^0.28.22",
+    "jwt-decode": "^3.1.2",
     "moment": "^2.29.1",
     "rxjs": "~6.4.0",
     "tslib": "^1.10.0",
