--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
-    "e2e": "ng e2e"
+    "e2e": "ng e2e",
+    "open-api": "openapi-generator-cli generate -g typescript-angular -i http://localhost:3000/openapi.json -o destino"
   },
   "private": true,
   "dependencies": {
