--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@angular/platform-browser-dynamic": "~8.2.14",
     "@angular/router": "~8.2.14",
     "angular-calendar": "^0.28.22",
+    "angularx-social-login": "2.0.1",
     "jwt-decode": "^3.1.2",
     "moment": "^2.29.1",
     "rxjs": "~6.4.0",
